# xmdpy

./: .coveragerc  .gitignore  .mailmap  .travis.yml  LICENSE  Makefile  README.md  appveyor.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml  python-package.yml
benchmarks/: loading.py  output.prof
src/xmdpy/: __init__.py  accessor.py  analysis.py  backend.py  cell.py  core.py  parsers.py  trajectory.py  trajectory_formats.py  types.py  version.py
src/xmdpy/backends/: core.py  entrypoint.py  names.py  on_disk_array.py  on_disk_trajectory.py  trajectory_formats.py  xdatcar.py  xyz.py
src/xmdpy/parsers/: README.md  base_parser.py  core.py  metadata.py  parsers.py  trajectory_formats.py  xdatcar.py  xyz.py
tests/: test_analysis.py  test_backend.py  test_cell.py
tests/backends/: test_entrypoint.py  test_parsing_utils.py  test_trajectory_formats.py  test_xdatcar.py  test_xyz.py
tests/data/: gen_traj.py
tests/parsers/: test_base_parser.py  test_trajectory_formats.py  test_xdatcar.py  test_xyz.py
xmdpy/: __init__.py  accessor.py  analysis.py  backend.py  backends.py  core.py  version.py
xmdpy/tests/: test_script.py
