[project]
name = "xmdpy"
version = "0.1.0"
description = "xmdpy: an Xarray interface for molecular dynamics trajectories"
authors = [
    { name = "Luke Gibson", email = "ldgibson819@gmail.com" }
]
maintainers = [
    { name = "Luke Gibson", email = "ldgibson819@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "dask>=2025.7.0",
    "numpy>=2.3.2",
    "xarray>=2025.9.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.entry-points."xarray.backends"]
xmdpy = "xmdpy.backend:XMDPYBackendEntrypoint"

[tool.pytest.ini_options]
pythonpath = "src"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "scipy>=1.16.1",
]
